--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <button class="external-button" onclick="openExternal('https://topembed.pw/channel/SkySportsMix[UK]')">🔗</button>
   </div>
   <div class="match-item">
-    <button class="match-button" onclick="loadM3U8Stream('https://topembed.pw/channel/SkySport.m3u8')">PSL Link 3 (M3U8)</button>
-    <button class="external-button" onclick="openExternal('https://topembed.pw/channel/SkySport.m3u8')">🔗</button>
+    <button class="match-button" onclick="loadM3U8Stream('https://jan.papaplayer.com:8035/hls/ptvpk.m3u8?md6=piz33WSZ7bn34ePZ3WvdNQ&expires=1744398700')">PSL Link 3 (M3U8)</button>
+    <button class="external-button" onclick="openExternal('https://jan.papaplayer.com:8035/hls/ptvpk.m3u8?md6=piz33WSZ7bn34ePZ3WvdNQ&expires=1744398700')">🔗</button>
   </div>
   <div class="match-item">
     <button class="match-button" onclick="loadIframeVideo('https://topembed.pw/channel/SkySportsMix[UK]')">PSL Link 4</button>
