--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
     <section class="playlist-section">
       <h2>Available Streams</h2>
       <div class="stream-list">
-        <div class="stream-item active" onclick="loadStream('https://jan.papaplayer.com:8035/hls/ptvpk.m3u8?md6=piz33WSZ7bn34ePZ3WvdNQ&expires=1744398700', this)">
+        <div class="stream-item active" onclick="loadStream('http://bdd00.4rouwanda-shop.store/live/978480008877005/index.m3u8?t=fa35jruCqBJbxK4UkDAtCA&e=1758476845', this)">
           <div class="stream-title">PSL Stream 1</div>
           <div class="stream-url">Secure M3U8 Stream</div>
         </div>
         
-        <div class="stream-item" onclick="loadStream('https://cph-p2p-msl.akamaized.net/hls/live/2000341/test/master.m3u8', this)">
+        <div class="stream-item" onclick="loadStream('http://bdd00.4rouwanda-shop.store/live/978480008877005/index.m3u8?t=fa35jruCqBJbxK4UkDAtCA&e=1758476845', this)">
           <div class="stream-title">Test Stream 2</div>
           <div class="stream-url">Akamai HD Stream</div>
         </div>
@@ -384,9 +384,10 @@
       // Auto-load the first stream
       const firstStream = document.querySelector('.stream-item');
       if (firstStream) {
-        loadStream('https://jan.papaplayer.com:8035/hls/ptvpk.m3u8?md6=piz33WSZ7bn34ePZ3WvdNQ&expires=1744398700', firstStream);
+        loadStream('http://bdd00.4rouwanda-shop.store/live/978480008877005/index.m3u8?t=fa35jruCqBJbxK4UkDAtCA&e=1758476845', firstStream);
       }
     });
   </script>
 </body>
 </html>
+
