--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="stream-url">Mux Test Stream</div>
         </div>
         
-        <div class="stream-item" onclick="loadStream('https://mnmedias.api.telequebec.tv/m3u8/29880.m3u8', this)">
+        <div class="stream-item" onclick="loadStream('https://5.kohahlrklm10.sbs/hls/1/stream.m3u8', this)">
           <div class="stream-title">Test Stream 4</div>
           <div class="stream-url">Tele Quebec Stream</div>
         </div>
@@ -390,4 +390,5 @@
   </script>
 </body>
 </html>
+
 
